objects/SGR_Renewal_Date_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Illinois</fullName>
                    <default>true</default>
                    <label>Illinois</label>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PREM</fullName>
                    <default>true</default>
                    <label>PREM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actuary</fullName>
                    <default>true</default>
                    <label>Actuary</label>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                    <default>true</default>
                    <label>SG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Renewal_Date__c</fullName>
        <label>Maximum Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Renewal_Date__c</fullName>
        <label>Minimum Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Current_Date__c</fullName>
        <label>Post Current Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Current_Date__c</fullName>
        <label>Prior Current Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analytical</fullName>
                    <default>true</default>
                    <label>Analytical</label>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Demand</fullName>
                    <default>true</default>
                    <label>On-Demand</label>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Renewal Date Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Division__c</columns>
        <columns>Trigger_Type__c</columns>
        <columns>Renewal_Type__c</columns>
        <columns>Group__c</columns>
        <columns>Minimum_Renewal_Date__c</columns>
        <columns>Maximum_Renewal_Date__c</columns>
        <columns>Prior_Current_Date__c</columns>
        <columns>Post_Current_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Renewal Date Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Date Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>